--- a/patronum.html
+++ b/patronum.html
@@ -342,12 +342,16 @@
                                 </div>
                                 <div>
                                     <div>
-                                        <p class="text_anim spline_p">Patronum is a swiss army knife for Google
-                                            Workspace™ administrators. It saves
-                                            time by automating repetitive and monotonous tasks like Email Signature
-                                            Management, Contact Sharing, Drive Management and much more. Patronum
-                                            transform the way Google Workspace™ capabilities are managed.
+                                        <p class="text_anim ">
+                                            <span>
+                                                Patronum is a swiss army knife for Google
+                                                Workspace™ administrators. It saves
+                                                time by automating repetitive and monotonous tasks like Email Signature
+                                                Management, Contact Sharing, Drive Management and much more. Patronum
+                                                transform the way Google Workspace™ capabilities are managed.
+                                            </span>
                                         </p>
+
                                     </div>
                                 </div>
                                 <div>
@@ -361,7 +365,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="number_year o-image" data-scroll="">
+                        <div id="number_year" data-scroll="">
                             <figure>
                                 <img data-scroll data-scroll-speed="2" alt="logo"
                                     src="assets/resources/img/patronum/patronum-logo.png">
@@ -393,7 +397,7 @@
                             <li role="item">
                                 <article class="list__services__item">
                                     <h3 class="text_anim"><span>Branding<sup>01</sup></span></h3>
-                                    <p class="text_anim spline_p">
+                                    <p class="text_anim">
                                         <span>Creating brand identity for a tool that automates the management of
                                             Google Workspace.</span>
                                     </p>
@@ -404,7 +408,7 @@
                                     <h3 class="text_anim"><span>Website<sup>02</sup></span>
                                         <apan></apan>
                                     </h3>
-                                    <p class="text_anim spline_p"><span>
+                                    <p class="text_anim"><span>
                                             Translate the tools features into a website that is user-friendly and
                                             incorporates visual product story with improved navigation. Implement a
                                             fully responsive solution backed by WordPress CMS
@@ -415,7 +419,7 @@
                                 <article class="list__services__item">
                                     <h3 class="text_anim"><span>Marketing<sup>02</sup></span></h3>
 
-                                    <p class="text_anim spline_p"><span>
+                                    <p class="text_anim"><span>
                                             Ensure SEO matrix & performance.
                                         </span></p>
                                 </article>
@@ -445,10 +449,16 @@
                                 <span>Logo </span>
                             </h2>
                         </div>
-                        <div class="text_anim spline_p">
-                            <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and
-                                costly. Let Patronum fully automate all the administrator and user tasks to ensure an
-                                effective and secure process.</p>
+                        <div class="text_anim ">
+                            <p>
+                                <span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and
+                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
+                                    an
+                                    effective and secure process.
+                                </span>
+                            </p>
                         </div>
                     </div>
                     <div class="concept" data-scroll>
@@ -464,10 +474,14 @@
                                 <span>Color </span>
                             </h2>
                         </div>
-                        <div class="text_anim spline_p">
-                            <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and
-                                costly. Let Patronum fully automate all the administrator and user tasks to ensure an
-                                effective and secure process.</p>
+                        <div class="text_anim ">
+                            <p><span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and
+                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
+                                    an
+                                    effective and secure process.
+                                </span></p>
                         </div>
                     </div>
                 </div>
@@ -518,10 +532,16 @@
                                 <span>Fonts </span>
                             </h2>
                         </div>
-                        <div class="text_anim spline_p">
-                            <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and
-                                costly. Let Patronum fully automate all the administrator and user tasks to ensure an
-                                effective and secure process.</p>
+                        <div class="text_anim">
+                            <p>
+                                <span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and
+                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
+                                    an
+                                    effective and secure process.
+                                </span>
+                            </p>
                         </div>
                     </div>
                     <div class="concept" data-scroll>
@@ -544,10 +564,16 @@
                                 <span>MObile Preview </span>
                             </h2>
                         </div>
-                        <div class="text_anim spline_p">
-                            <p>Provisioning and deprovisioning users within Google Workspace can be time-consuming and
-                                costly. Let Patronum fully automate all the administrator and user tasks to ensure an
-                                effective and secure process.</p>
+                        <div class="text_anim">
+                            <p>
+                                <span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and
+                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
+                                    an
+                                    effective and secure process.
+                                </span>
+                            </p>
                         </div>
                     </div>
                     <div class="left_block grid_intern" data-scroll>
@@ -582,7 +608,7 @@
                             <svg viewBox="0 0 62 62" version="1.1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                    <g transform="translate(5.000000, 5.000000)" stroke="#ffffff" stroke-width="15">
+                                    <g transform="translate(5.000000, 5.000000)" stroke="#2b2b2b" stroke-width="15">
                                         <g>
                                             <polyline
                                                 transform="translate(37.000000, 37.000000) rotate(-315.000000) translate(-37.000000, -37.000000) "
@@ -647,7 +673,7 @@
                                         <li>
                                             <a href="https://www.instagram.com/enigmadigital/" target="_blank"
                                                 class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
+                                                    <lottie-player class="so" src="Instagramlogo.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
@@ -672,7 +698,7 @@
                                         <li>
                                             <a href="https://www.behance.net/enigma-digital" target="_blank"
                                                 class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="behance.json"
+                                                    <lottie-player class="so" src="behance-w.json"
                                                         background="transparent" speed="1"
                                                         style="width: 20px; height: 20px;" hover></lottie-player>
                                                 </span></a>
