--- a/patronum.html
+++ b/patronum.html
@@ -601,9 +601,9 @@
                     data-breadcrumb="white">
                     <div class="next-project__content">
                         <p class="txt--p5">Next project</p>
-                        <a href="certvault.html" class="title--title2 next">
-                            <img class="swipeimage" src="/assets/resources/img/work-certvault.png">
-                            <span class="s" data-chaffle="en">Certvault
+                        <a href="#" class="title--title2 next">
+                            <img class="swipeimage" src="/assets/resources/img/work-kedar.png">
+                            <span class="s" data-chaffle="en">Kedarkala
                             </span>
                             <svg viewBox="0 0 62 62" version="1.1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink">
