--- a/blogs.html
+++ b/blogs.html
@@ -295,6 +295,63 @@
     <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
+                <div class="page-header" data-anim="true">
+
+                    <div class="page-header-wrap wrapper-small">
+
+                        <!-- Page Title -->
+                        <div class="page-title">
+                            <h1 class=" big-title"><span class="header_title_line"><span>
+                                        Stories
+                                    </span></span>
+
+                            </h1>
+                        </div>
+                        <!-- /Page Title -->
+
+                    </div>
+
+                </div>
+                <div class="container">
+                    <!--Work Categories-->
+                    <div class="aw-categories">
+
+                        <ul class="aw-cats">
+                            <!--Work Category-->
+                            <li data-cat="all">All</li>
+                            <!--/Work Category-->
+
+                            <!--Work Category-->
+                            <li data-cat="ui-ux">Strategy</li>
+                            <!--/Work Category-->
+
+                            <!--Work Category-->
+                            <li data-cat="Design">Design</li>
+                            <!--/Work Category-->
+
+                            <!--Work Category-->
+                            <li data-cat="Technology">Technology</li>
+                            <!--/Work Category-->
+
+                            <!--Work Category-->
+                            <li data-cat="Marketing">Marketing</li>
+                            <!--/Work Category-->
+                            <!--Work Category-->
+                            <li id="cl"><a href='#search'>Search </a></li>
+                            <!--/Work Category-->
+                        </ul>
+
+                    </div>
+                    <!--/Work Categories-->
+                </div>
+                <!-- overlay !-->
+                <div id="search" class="fade">
+                    <a href="#" class="close-btn" id="close-search">
+                        x
+                    </a>
+                    <input placeholder="type here" id="searchbox" type="search" />
+                </div>
+                <!--- /overlay -->
                 <section class="recent-post" data-humcolor="#000">
                     <div class="container">
                         <div class="pr-list">
