--- a/blogs.html
+++ b/blogs.html
@@ -349,7 +349,7 @@
                     <a href="#" class="close-btn" id="close-search">
                         x
                     </a>
-                    <input placeholder="type here" id="searchbox" type="search" />
+                    <input placeholder="type here to search" id="searchbox" type="search" />
                 </div>
                 <!--- /overlay -->
                 <section class="recent-post" data-humcolor="#000">
