--- a/blogs.html
+++ b/blogs.html
@@ -295,7 +295,7 @@
     <main role="main" id="main">
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
-                <div class="page-header" data-anim="true">
+                <div class="page-header" data-anim="true" data-humcolor="#000">
 
                     <div class="page-header-wrap wrapper-small">
 
