--- a/blogs.html
+++ b/blogs.html
@@ -393,7 +393,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/assets/resources/img/blog-element/Blog-001.png'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
@@ -417,7 +417,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/2b.jpeg'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
@@ -440,7 +440,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/3b.jpeg'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
@@ -465,7 +465,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/4b.jpeg'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
@@ -488,7 +488,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/5b.jpeg'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
@@ -511,7 +511,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/6b.jpeg'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
@@ -535,7 +535,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/7b.jpeg'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
@@ -559,7 +559,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/1b.jpg'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
@@ -583,7 +583,7 @@
                             <div class="pr-thum">
                                 <a href="blog-details.html" class='reveal' data-cursor-text="Read More"
                                     data-cursor="-color-bl">
-                                    <img src='/3b.jpeg'>
+                                    <img src='/assets/resources/img/blog-element/coming-soon-page.webp'>
                                 </a>
                             </div>
                             <a href="blog-details.html" class='reveal' data-cursor-text="Read More">
