--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="icon" href="./assets/resources/img/fav-icon.png" type="" sizes="16x16">
-    <link href="https://unpkg.com/splitting@1.0.0/dist/splitting.css" type="text/css" rel="stylesheet">
+    <link href="assets/resources/styles/css/font-aw.css" type="text/css" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PKJE9LVB35"></script>
@@ -44,19 +44,14 @@
                         <div class="col-12 col-lg-8 mx-lg-auto" style="position: relative;">
                             <div class=" mb-3">
                                 <div>
-                                    <h1 class="display--lg-4 ">Our Web Developer is busy building this page</h1>
+                                    <h1 class="display--lg-4 main-h">Our Web Developer is busy building this page</h1>
                                 </div>
 
                             </div>
-                            <p class="lead mb-5 web-text">Please help him get<span class="font-medium"> unstuck</span>
-                                so he can
-                                work on launching our new website. In the meantime, you can follow us on social media to
-                                stay updated on the latest & greatest!</p>
+                            <h2 class="lead mb-5 sub-1">Please check back soon</h2>
                             <p class="mobile-text lead mb-5">
-                                Please visit our website from a desktop/laptop and help him get <span
-                                    class="font-medium">unstuck</span> so he can work
-                                on launching our new website. In the meantime, you can follow us on social media to stay
-                                updated on the latest & greatest!
+                                In the meantime, please feel free to <a href="contact.html">contact</a> us or we can
+                                take you back <a href="index.html" style="">home</a>
                             </p>
 
                         </div>
@@ -70,29 +65,73 @@
         </div><!-- .oli-fullpage end -->
 
         <!-- Site Footer -->
-        <footer class="site-footer footer-fixed footer-mobile-dark footer-dark">
-            <div class="container-fluid d-md-flex align-items-md-center justify-content-md-between">
-                <p class="mb-2 mb-xl-0">© 2022 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.
-                </p>
-                <nav class="social-nav ">
-                    <ul>
-                        <li><a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"> <i
-                                    class="fab fa-linkedin"></i></a>
-                        </li>
-                        <li><a href="https://www.facebook.com/in.enigmadigital" target="_blank"> <i
-                                    class="fab fa-facebook-f"></i></a>
-                        </li>
-                        <li><a href="https://twitter.com/_EnigmaDigital" target="_blank"><i
-                                    class="fab fa-twitter"></i></a>
-                        </li>
-                        <li><a href="https://www.instagram.com/enigmadigital/" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
-                        </li>
-                        <li><a href="https://www.behance.net/enigma-digital" target="_blank"><i
-                                    class="fab fa-behance"></i></a>
-                        </li>
-                    </ul>
-                </nav>
+        <!-- footer -->
+        <footer id="footer">
+            <div class="f-container">
+                <div class="footer-flex">
+                    <div class="footer-right">
+                        <a class="cb-outro-social-item" data-cursor="-opaque" href="about.html"><span
+                                class="cb-outro-social-item-title"><span data-text="About">About</span></span></a>
+                        <a class="cb-outro-social-item" data-cursor="-opaque" href="services.html"><span
+                                class="cb-outro-social-item-title"><span
+                                    data-text="Expertises">Expertises</span></span></a>
+                        <a class="cb-outro-social-item" data-cursor="-opaque" href="works.html"><span
+                                class="cb-outro-social-item-title"><span data-text="Works">Works</span></span></a>
+                        <a class="cb-outro-social-item" data-cursor="-opaque" href="blogs.html"><span
+                                class="cb-outro-social-item-title"><span data-text="Insights">Insights</span></span></a>
+
+                        <a class="cb-outro-social-item" data-cursor="-opaque"><span
+                                class="cb-outro-social-item-title"><span data-text="Career">Career</span></span></a>
+                        <a class="cb-outro-social-item" data-cursor="-opaque" href="contact.html"><span
+                                class="cb-outro-social-item-title"><span data-text="Contact">Contact</span></span></a>
+                    </div>
+                    <div class="footer-left">
+                        <div class="botom">
+                            <ul>
+                                <li>
+                                    <a href="https://www.facebook.com/in.enigmadigital" target="_blank" class="insta"
+                                        data-cursor="-opaque"><span>
+                                            <lottie-player class="so" src="facebook.json" background="transparent"
+                                                speed="1" style="width: 15px; height: 20px;" hover></lottie-player>
+                                        </span></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/enigmadigital/" target="_blank" class="face"
+                                        data-cursor="-opaque"><span>
+                                            <lottie-player class="so" src="Instagram-logo.json" background="transparent"
+                                                speed="1" style="width: 20px; height: 20px;" hover></lottie-player>
+                                        </span></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"
+                                        class="lin" data-cursor="-opaque"><span>
+                                            <lottie-player class="so" src="linkedin.json" background="transparent"
+                                                speed="1" style="width: 20px; height: 20px;" hover></lottie-player>
+                                        </span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/_EnigmaDigital" target="_blank" class="twit"
+                                        data-cursor="-opaque"><span>
+                                            <lottie-player class="so" src="twitter.json" background="transparent"
+                                                speed="1" style="width: 20px; height: 20px;" hover></lottie-player>
+                                        </span></a>
+                                </li>
+                                <li>
+                                    <a href="https://www.behance.net/enigma-digital" target="_blank" class="face"
+                                        data-cursor="-opaque"><span>
+                                            <lottie-player class="so" src="behance.json" background="transparent"
+                                                speed="1" style="width: 20px; height: 20px;" hover></lottie-player>
+                                        </span></a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="bottom-footer">
+                    <p>© 2022 Enigma Digital Consulting, LLP. All Rights Reserved. All Wrongs Reversed.</p>
+                </div>
             </div>
         </footer>
 
@@ -102,5 +141,7 @@
     <script src="assets/resources/js/canvas.js"></script>
 
 </body>
+
+</html>
 
 </html>
