--- a/contact.html
+++ b/contact.html
@@ -12,15 +12,15 @@
    <link rel="icon" href="./assets/resources/img/fav-icon.png" type="" sizes="16x16">
    <link href="https://unpkg.com/splitting@1.0.0/dist/splitting.css" type="text/css" rel="stylesheet">
    <link href="/assets/resources/styles/css/st.css" type="text/css" rel="stylesheet">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PKJE9LVB35"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PKJE9LVB35"></script>
+   <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
 
-		gtag('config', 'G-PKJE9LVB35');
-	</script>
+      gtag('config', 'G-PKJE9LVB35');
+   </script>
 </head>
 <div class="load-container">
    <div class="loading-screen"></div>
@@ -256,37 +256,37 @@
             </nav>
             <div class="nav-second">
                <div class="Menu-socials">
-                        <div class="Menu-socialsItem" data-cursor="-opaque">
-                            <a href="https://www.facebook.com/weareenigma/" target="_blank" rel="noopener"
-                                class="Menu-socialsItemLink">
-                                <span class="Menu-socialsItemLabel">Facebook</span>
-                            </a>
-                        </div>
-                        <div class="Menu-socialsItem" data-cursor="-opaque">
-                            <a href="https://www.instagram.com/enigmadigital/?hl=en" target="_blank" rel="noopener"
-                                class="Menu-socialsItemLink">
-                                <span class="Menu-socialsItemLabel">Instagram</span>
-                            </a>
-                        </div>
-                        <div class="Menu-socialsItem" data-cursor="-opaque">
-                            <a href="https://www.linkedin.com/company/enigma-digital-in/mycompany/" target="_blank"
-                                rel="noopener" class="Menu-socialsItemLink">
-                                <span class="Menu-socialsItemLabel">Linkedin</span>
-                            </a>
-                        </div>
-                        <div class="Menu-socialsItem" data-cursor="-opaque">
-                            <a href="https://twitter.com/_EnigmaDigital" target="_blank" rel="noopener"
-                                class="Menu-socialsItemLink">
-                                <span class="Menu-socialsItemLabel">Twitter</span>
-                            </a>
-                        </div>
-                        <div class="Menu-socialsItem" data-cursor="-opaque">
-                            <a href="https://www.behance.net/enigma-digital" target="_blank" rel="noopener"
-                                class="Menu-socialsItemLink">
-                                <span class="Menu-socialsItemLabel">behance</span>
-                            </a>
-                        </div>
-                    </div>
+                  <div class="Menu-socialsItem" data-cursor="-opaque">
+                     <a href="https://www.facebook.com/weareenigma/" target="_blank" rel="noopener"
+                        class="Menu-socialsItemLink">
+                        <span class="Menu-socialsItemLabel">Facebook</span>
+                     </a>
+                  </div>
+                  <div class="Menu-socialsItem" data-cursor="-opaque">
+                     <a href="https://www.instagram.com/enigmadigital/?hl=en" target="_blank" rel="noopener"
+                        class="Menu-socialsItemLink">
+                        <span class="Menu-socialsItemLabel">Instagram</span>
+                     </a>
+                  </div>
+                  <div class="Menu-socialsItem" data-cursor="-opaque">
+                     <a href="https://www.linkedin.com/company/enigma-digital-in/mycompany/" target="_blank"
+                        rel="noopener" class="Menu-socialsItemLink">
+                        <span class="Menu-socialsItemLabel">Linkedin</span>
+                     </a>
+                  </div>
+                  <div class="Menu-socialsItem" data-cursor="-opaque">
+                     <a href="https://twitter.com/_EnigmaDigital" target="_blank" rel="noopener"
+                        class="Menu-socialsItemLink">
+                        <span class="Menu-socialsItemLabel">Twitter</span>
+                     </a>
+                  </div>
+                  <div class="Menu-socialsItem" data-cursor="-opaque">
+                     <a href="https://www.behance.net/enigma-digital" target="_blank" rel="noopener"
+                        class="Menu-socialsItemLink">
+                        <span class="Menu-socialsItemLabel">behance</span>
+                     </a>
+                  </div>
+               </div>
             </div>
          </div>
       </div>
@@ -311,7 +311,8 @@
                </div>
             </section>
             <!--top  Section-->
-            <section class="contact-form-block black-bg " id="contact-form" data-scroll data-humcolor="#000">
+            <section class="contact-form-block black-bg " id="contact-form" data-scroll data-humcolor="#000"
+               style="background: #fff;">
                <div class="contact-inner d-flex flex-row justify-content-sb" data-scroll>
                   <div id="contact-left-sticky"></div>
                   <div class="contact-left-img web" data-scroll data-scroll-sticky
@@ -341,53 +342,51 @@
                         </h1>
                      </div>
 
-                     <div class='gf_browser_chrome gform_wrapper gform_legacy_markup_wrapper' id='gform_wrapper_2'>
-                        <div id='gf_2' class='gform_anchor' tabindex='-1'></div>
-                        <form method='post' enctype='multipart/form-data' target='_frame_2' id='gform_2'
+                     <div class='gf_browser_chrome enform_wrapper enform_legacy_markup_wrapper' id='enform_wrapper_2'>
+                        <div id='gf_2' class='enform_anchor' tabindex='-1'></div>
+                        <form method='post' enctype='multipart/form-data' target='_frame_2' id='enform_2'
                            action='/contact/#gf_2'>
-                           <div class='gform_body gform-body'>
-                              <ul id='gform_fields_2'
-                                 class='gform_fields top_label form_sublabel_below description_below'>
+                           <div class='enform_body enform-body'>
+                              <ul id='enform_fields_2'
+                                 class='enform_fields top_label form_sublabel_below description_below'>
                                  <li id="field_2_1"
                                     class="gfield gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class='gfield_label' for='input_2_1'>Name<span class="gfield_required"><span
                                              class="gfield_required gfield_required_asterisk">*</span></span></label>
-                                    <div class='ginput_container ginput_container_text'><input name='input_1'
-                                          id='input_2_1' type='text' value='' class='medium' tabindex='49'
-                                          placeholder='Name*' aria-required="true" aria-invalid="false" /></div>
+                                    <div class='ginput_container ginput_container_text'><input name='' id='' type='text'
+                                          value='' class='medium' tabindex='49' placeholder='Name*' aria-required="true"
+                                          aria-invalid="false" /></div>
                                  </li>
                                  <li id="field_2_2"
                                     class="gfield gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class='gfield_label' for='input_2_2'>Company Name<span
                                           class="gfield_required"><span
                                              class="gfield_required gfield_required_asterisk">*</span></span></label>
-                                    <div class='ginput_container ginput_container_text'><input name='input_2'
-                                          id='input_2_2' type='text' value='' class='medium' tabindex='50'
-                                          placeholder='Company Name*' aria-required="true" aria-invalid="false" /></div>
+                                    <div class='ginput_container ginput_container_text'><input name='' id='' type='text'
+                                          value='' class='medium' tabindex='50' placeholder='Company Name*'
+                                          aria-required="true" aria-invalid="false" /></div>
                                  </li>
                                  <li id="field_2_3"
                                     class="gfield field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class='gfield_label' for='input_2_3'>Phone Number</label>
-                                    <div class='ginput_container ginput_container_text'><input name='input_3'
-                                          id='input_2_3' type='text' value='' class='medium' tabindex='51'
-                                          placeholder='Phone Number' aria-invalid="false" /></div>
+                                    <div class='ginput_container ginput_container_text'><input name='' id='' type='text'
+                                          value='' class='medium' tabindex='51' placeholder='Phone Number'
+                                          aria-invalid="false" /></div>
                                  </li>
                                  <li id="field_2_4"
                                     class="gfield gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class='gfield_label' for='input_2_4'>Email<span class="gfield_required"><span
                                              class="gfield_required gfield_required_asterisk">*</span></span></label>
-                                    <div class='ginput_container ginput_container_email'> <input name='input_4'
-                                          id='input_2_4' type='text' value='' class='medium' tabindex='52'
-                                          placeholder='Email Address*' aria-required="true" aria-invalid="false" />
+                                    <div class='ginput_container ginput_container_email'> <input name='' id=''
+                                          type='text' value='' class='medium' tabindex='52' placeholder='Email Address*'
+                                          aria-required="true" aria-invalid="false" />
                                     </div>
                                  </li>
                               </ul>
                            </div>
-                           <div class='gform_footer top_label'> <button class='button gform_button' data-magnetic=""
-                                 data-cursor="-opaque" id='gform_submit_button_2'><span>Submit</span> <span><img
-                                       src="/assets/resources/img/arrow-icon-c-01.svg" /></span></button> <input
-                                 type='hidden' name='' />
-
+                           <div class='enform_footer top_label'> <button class='button enform_button' data-magnetic=""
+                                 data-cursor="-opaque" id='enform_submit_button_2'>Submit <span><img
+                                       src="/assets/resources/img/arrow-icon-c-01.svg" /></span></button>
                            </div>
                         </form>
                      </div>
@@ -457,48 +456,43 @@
                      <div class="footer-left">
                         <div class="botom">
                            <ul>
-                                        <li>
-                                            <a href="https://www.facebook.com/in.enigmadigital" target="_blank"
-                                                class="insta" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="facebook.json"
-                                                        background="transparent" speed="1"
-                                                        style="width: 15px; height: 20px;" hover></lottie-player>
-                                                </span></a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.instagram.com/enigmadigital/" target="_blank"
-                                                class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="Instagram-logo.json"
-                                                        background="transparent" speed="1"
-                                                        style="width: 20px; height: 20px;" hover></lottie-player>
-                                                </span></a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"
-                                                class="lin" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="linkedin.json"
-                                                        background="transparent" speed="1"
-                                                        style="width: 20px; height: 20px;" hover></lottie-player>
-                                                </span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="https://twitter.com/_EnigmaDigital" target="_blank"
-                                                class="twit" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="twitter.json"
-                                                        background="transparent" speed="1"
-                                                        style="width: 20px; height: 20px;" hover></lottie-player>
-                                                </span></a>
-                                        </li>
-                                        <li>
-                                            <a href="https://www.behance.net/enigma-digital" target="_blank"
-                                                class="face" data-cursor="-opaque"><span>
-                                                    <lottie-player class="so" src="behance.json"
-                                                        background="transparent" speed="1"
-                                                        style="width: 20px; height: 20px;" hover></lottie-player>
-                                                </span></a>
-                                        </li>
-                                    </ul>
+                              <li>
+                                 <a href="https://www.facebook.com/in.enigmadigital" target="_blank" class="insta"
+                                    data-cursor="-opaque"><span>
+                                       <lottie-player class="so" src="facebook.json" background="transparent" speed="1"
+                                          style="width: 15px; height: 20px;" hover></lottie-player>
+                                    </span></a>
+                              </li>
+                              <li>
+                                 <a href="https://www.instagram.com/enigmadigital/" target="_blank" class="face"
+                                    data-cursor="-opaque"><span>
+                                       <lottie-player class="so" src="Instagramlogo.json" background="transparent"
+                                          speed="1" style="width: 20px; height: 20px;" hover></lottie-player>
+                                    </span></a>
+                              </li>
+                              <li>
+                                 <a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank" class="lin"
+                                    data-cursor="-opaque"><span>
+                                       <lottie-player class="so" src="linkedin.json" background="transparent" speed="1"
+                                          style="width: 20px; height: 20px;" hover></lottie-player>
+                                    </span>
+                                 </a>
+                              </li>
+                              <li>
+                                 <a href="https://twitter.com/_EnigmaDigital" target="_blank" class="twit"
+                                    data-cursor="-opaque"><span>
+                                       <lottie-player class="so" src="twitter.json" background="transparent" speed="1"
+                                          style="width: 20px; height: 20px;" hover></lottie-player>
+                                    </span></a>
+                              </li>
+                              <li>
+                                 <a href="https://www.behance.net/enigma-digital" target="_blank" class="face"
+                                    data-cursor="-opaque"><span>
+                                       <lottie-player class="so" src="behance-w.json" background="transparent" speed="1"
+                                          style="width: 20px; height: 20px;" hover></lottie-player>
+                                    </span></a>
+                              </li>
+                           </ul>
                         </div>
 
                      </div>
