--- a/index.html
+++ b/index.html
@@ -830,7 +830,8 @@
                                         <div class="en-form-submit"><a href="strategy.html" class="en-btn en-btn_send"
                                                 data-magnetic data-cursor="-opaque"><span
                                                     data-text="Transform Your Business">Transform Your
-                                                    Business</span></a>
+                                                    Business<span class="arro"><img
+                                                            src="/assets/resources/img/arrow-icon-c-01.svg" /></span></span></a>
                                         </div>
                                     </div>
                                 </li>
@@ -876,7 +877,8 @@
                                         <div class="en-form-submit"><a href="interface-design.html"
                                                 class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
                                                     data-text="Upgrade Your Experience">Upgrade
-                                                    Your Experience</span></a>
+                                                    Your Experience<span class="arro"><img
+                                                            src="/assets/resources/img/arrow-icon-c-01.svg" /></span></span></a>
                                         </div>
                                     </div>
                                 </li>
@@ -920,7 +922,8 @@
                                         <div class="en-form-submit"><a href="technology-development.html"
                                                 class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
                                                     data-text="Let’s Build Your Idea">Let’s
-                                                    Build Your Idea</span></a>
+                                                    Build Your Idea<span class="arro"><img
+                                                            src="/assets/resources/img/arrow-icon-c-01.svg" /></span></span></a>
                                         </div>
                                     </div>
                                 </li>
@@ -966,7 +969,8 @@
                                                 class="en-btn en-btn_send" data-magnetic data-cursor="-opaque"><span
                                                     data-text="Ready? Let’s Get
                                                 Moving">Ready? Let’s Get
-                                                    Moving</span></a>
+                                                    Moving<span class="arro"><img
+                                                            src="/assets/resources/img/arrow-icon-c-01.svg" /></span></span></a>
                                         </div>
                                     </div>
                                 </li>
