--- a/services.html
+++ b/services.html
@@ -296,7 +296,7 @@
         <div class="scroll-content smooth-scroll" data-scroll-speed="8">
             <div class="wrapper">
                 <!--top  Section-->
-                <section class="about-us-section" data-humcolor="#000">
+                <section class="about-us-section" data-humcolor="#000" data-bgcolor="#fff">
                     <div class="about-us-inner d-flex" id="scroll-direction">
                         <div id="test"></div>
                         <div class="about-us-image move" data-scroll data-scroll-sticky
