--- a/interface-design.html
+++ b/interface-design.html
@@ -402,62 +402,85 @@
                             </span>
                         </h2>
                     </div>
-                    <section id="sectionPin">
-                        <div class="pin-wrap">
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="01">
-                                <h4>RESEARCH</h4>
-                                <p>(Building the understanding of your business as our own) - We begin at the most
+                    <!-- New Section -->
+                    <section class="ser-two" data-scroll="">
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="01">
+                            <h2>
+                                <span>RESEARCH</span>
+                            </h2>
+                            <p>
+                                <span>(Building the understanding of your business as our own) - We begin at the most
                                     fundamental level. We conduct thorough research to gather information about your
                                     industry, your company and its products and services. We want to know everything
                                     that matters - your company’s vision, the product, its purpose, its U.S.P.s, your
-                                    target audience and the business expectations.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="02">
-                                <h4>DISCOVERY</h4>
-                                <p>(Understanding the goals & challenges) - We then sit with you for an extensive
+                                    target audience and the business expectations.</span>
+                            </p>
+                        </div>
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="02">
+                            <h2>
+                                <span>DISCOVERY</span>
+                            </h2>
+                            <p>
+                                <span>(Understanding the goals & challenges) - We then sit with you for an extensive
                                     discovery session to understand your business goals, challenges and pain points
                                     you’re trying to solve through design. We’ll also look at the data that tells us
                                     which parts of your current interface are working and which are not. This will help
-                                    us create a plan of action tailored to your needs.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="03">
-                                <h4>Storyboards</h4>
-                                <p>(Customer Journey Mapping) - We develop ideas based on our findings in the research &
+                                    us create a plan of action tailored to your needs.</span>
+                            </p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="03">
+                            <h2>
+                                <span>Storyboards</span>
+                            </h2>
+                            <p>
+                                <span>
+                                    (Customer Journey Mapping) - We develop ideas based on our findings in the research
+                                    &
                                     discovery phase. We identify the core functionality of your product, define use
-                                    cases and build storyboards for each use case.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="04">
-                                <h4>Wire-framing & Prototyping </h4>
-                                <p>(Defining the UX flow) - We create wireframes that help us visualise how a user will
-                                    interact with your website or application. Using tools like Adobe XD, Figma,
-                                    InVision and even pencil & paper, we include all features and structural assumptions
-                                    as rough sketches. This process is highly critical as it broadly defines the flow of
-                                    your interface before the actual designing process begins.
-                                </p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="05">
-                                <h4>TVisual/U.I. Design</h4>
-                                <p>(Designing the Interface) - We present design strategies that include various colour
+                                    cases and build storyboards for each use case.
+                                </span>
+                            </p>
+                        </div>
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="04">
+                            <h2>
+                                <span>Wire-framing & Prototyping</span>
+                            </h2>
+                            <p>
+                                <span>(Designing the Interface) - We present design strategies that include various
+                                    colour
                                     schemes, style tiles, collections of typography, navigation structure, & call to
-                                    actions that convey your brand identity and message to your target audience.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="06">
-                                <h4>Refinement</h4>
-                                <p>(Usability Testing & User Feedback) - We conduct user-testing sessions and perform a
+                                    actions that convey your brand identity and message to your target audience.</span>
+                            </p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="05">
+                            <h2>
+                                <span>TVisual/U.I. Design</span>
+                            </h2>
+                            <p>We map your audience’s online behaviour and digital touchpoints to define the
+                                consumer journey.</p>
+                        </div>
+                        <div class="item mar-top item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="06">
+                            <h2>
+                                <span>Refinement</span>
+                            </h2>
+                            <p><span>
+                                    (Usability Testing & User Feedback) - We conduct user-testing sessions and perform a
                                     detailed analysis on the pre-established KPIs to understand the areas of improvement
                                     and the aberration from the desirable effect on the target audience. We then analyse
                                     all the collected data and synthesise our findings into actionable design
                                     improvements to further enhance your product.
-                                </p>
-                            </div>
+                                </span></p>
                         </div>
+
                     </section>
+
+                    <!-- Mobile Section -->
                     <section id="sectionPin2" class="serv">
                         <div class="pin-wrap">
                             <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
