--- a/strategy.html
+++ b/strategy.html
@@ -423,57 +423,71 @@
                             </span>
                         </h2>
                     </div>
-                    <section id="sectionPin" class="serv">
-                        <div class="pin-wrap" data-scroll>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="01">
-                                <h4>GATHERING INSIGHTS</h4>
-                                <p>As strategic thinkers, every one of our engagements starts with a review of known
-                                    challenges and an assessment of which outcomes will define success. This phase
-                                    aligns the stakeholders and clarifies the central problem to be solved.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="02">
-                                <h4>AUDIENCE MAPPING</h4>
-                                <p>We combine your audience data with our own online audience insights to help you
-                                    better understand our audience’s thoughts, feelings and behaviours to reach the
-                                    right audiences.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="03">
-                                <h4>Competition Mapping</h4>
-                                <p>We thoroughly analyse market trends and competitor performance to identify where
-                                    market opportunities exist within your business sector and how to best
-                                    capitalise on them.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="04">
-                                <h4>Brand Position Mapping</h4>
-                                <p>We collaborate with you to develop a new brand positioning, proposition or
-                                    refresh an existing one.
-                                </p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="05">
-                                <h4>Touchpoint/Journey Mapping</h4>
-                                <p>We map your audience’s online behaviour and digital touchpoints to define the
-                                    consumer journey.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="06">
-                                <h4>Roadmap & Integration</h4>
-                                <p>We’ll work with you to implement the right integrated strategy by integrating the
-                                    insights we’ve gathered in previous steps to create a comprehensive roadmap that
-                                    is not just channel-specific.</p>
-                            </div>
-                            <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
-                                data-scroll-direction="horizontal" data-text="07">
-                                <h4>Implementation & Improvisation</h4>
-                                <p>All set? Time to test the waters and improve on any gaps along the way to
-                                    accomplish each and every goal.</p>
-                            </div>
+                    <!-- New Section -->
+                    <section class="ser-two" data-scroll="">
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="01">
+                            <h2>
+                                <span>GATHERING INSIGHTS</span>
+                            </h2>
+                            <p>As strategic thinkers, every one of our engagements starts with a review of known
+                                challenges and an assessment of which outcomes will define success. This phase
+                                aligns the stakeholders and clarifies the central problem to be solved.</p>
                         </div>
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="02">
+                            <h2>
+                                <span>AUDIENCE MAPPING</span>
+                            </h2>
+                            <p>We combine your audience data with our own online audience insights to help you
+                                better understand our audience’s thoughts, feelings and behaviours to reach the
+                                right audiences.</p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="03">
+                            <h2>
+                                <span>Competition Mapping</span>
+                            </h2>
+                            <p>We thoroughly analyse market trends and competitor performance to identify where
+                                market opportunities exist within your business sector and how to best
+                                capitalise on them.</p>
+                        </div>
+                        <div class="item mar-top opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="04">
+                            <h2>
+                                <span>Brand Position Mapping</span>
+                            </h2>
+                            <p>We collaborate with you to develop a new brand positioning, proposition or
+                                refresh an existing one.</p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="05">
+                            <h2>
+                                <span>Touchpoint/Journey Mapping</span>
+                            </h2>
+                            <p>We map your audience’s online behaviour and digital touchpoints to define the
+                                consumer journey.</p>
+                        </div>
+                        <div class="item mar-top item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="06">
+                            <h2>
+                                <span>Roadmap & Integration</span>
+                            </h2>
+                            <p>We’ll work with you to implement the right integrated strategy by integrating the
+                                insights we’ve gathered in previous steps to create a comprehensive roadmap that
+                                is not just channel-specific.</p>
+                        </div>
+                        <div class="item opacity-0" data-scroll="" data-scroll-speed="9"
+                            data-scroll-direction="horizontal" data-text="07">
+                            <h2>
+                                <span>Implementation & Improvisation</span>
+                            </h2>
+                            <p>All set? Time to test the waters and improve on any gaps along the way to
+                                accomplish each and every goal.</p>
+                        </div>
+
                     </section>
+                    <!-- Mobile Section -->
                     <section id="sectionPin2" class="serv">
                         <div class="pin-wrap">
                             <div class="item" data-text="01">
